--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <header>
+<!--Header-->    
+<header>
     <a href="./"> Логотип</a>
     <nav>
         <ul>
@@ -18,7 +19,16 @@
     <ul>
         <li><a href="tel:+380503086282">+38 (050) 308 62 82</a></li>
     </ul>
-   </header> 
+</header> 
+<main> 
+<!--Hero-->
+ <h1>Наші круасани - це симфонія смаків.</h1>
+ <h1>CПІВПРАЦЮЙТЕ З НАМИ !</h1>
+<!--Advantages-->   
+<!--Product range-->
+<!--Delivery-->
+</main>
+<!--Footer-->
     
 </body>
 </html>
