--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
 </header> 
 <main> 
 <!--Hero-->
- <h1>Наші круасани - це симфонія смаків.</h1>
- <h1>CПІВПРАЦЮЙТЕ З НАМИ !</h1>
+<section>
+  <h1>Наші круасани - це симфонія смаків.</h1>
+  <h2>CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+</section> 
 <!--Advantages-->   
+<section>
+    <h2>ПРО НАС</h2>
+    <ul>
+        <li></li>
+    </ul>
+</section>
 <!--Product range-->
 <!--Delivery-->
 </main>
