--- a/index.html
+++ b/index.html
@@ -1,42 +1,149 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<!--Header-->    
-<header>
-    <a href="./"> Логотип</a>
-    <nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>One11 Bakery</title>
+  </head>
+  <body>
+    <!--Header-->
+    <header>
+      <a href="./"> Логотип</a>
+      <nav>
         <ul>
-           <li><a href="">ПРО НАС</a></li>
-           <li><a href="">МЕНЮ</a></li> 
-           <li><a href="">ДОСТАВКА </a></li>  
+          <li><a href="">ПРО НАС</a></li>
+          <li><a href="">МЕНЮ</a></li>
+          <li><a href="">ДОСТАВКА </a></li>
         </ul>
-    </nav>
-    <ul>
+      </nav>
+      <ul>
         <li><a href="tel:+380503086282">+38 (050) 308 62 82</a></li>
-    </ul>
-</header> 
-<main> 
-<!--Hero-->
-<section>
-  <h1>Наші круасани - це симфонія смаків.</h1>
-  <h2>CПІВПРАЦЮЙТЕ З НАМИ !</h2>
-</section> 
-<!--Advantages-->   
-<section>
-    <h2>ПРО НАС</h2>
-    <ul>
-        <li></li>
-    </ul>
-</section>
-<!--Product range-->
-<!--Delivery-->
-</main>
-<!--Footer-->
-    
-</body>
+      </ul>
+    </header>
+    <!--Main content-->
+    <main>
+      <!--Hero-->
+      <section>
+        <h1>Наші круасани - це симфонія смаків.</h1>
+        <h2>CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+      </section>
+      <!--Advantages-->
+      <section>
+        <h2>ПРО НАС</h2>
+        <ul>
+          <li>
+            <img
+              src="/imanges/advantages/1-img.jpg"
+              alt="Серед великої жмені борошна лежить шматок вершкового масла"
+              width="370"
+              height="310"
+            />
+            <p>
+              Кожен наш круасан майже на чверть складється зі справжнього
+              вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
+              класичної рецептури, якої ми чітко дотримуємося.
+            </p>
+          </li>
+          <li>
+            <p>
+              На виготовлення крафтового круасана необхідно цілу добу для
+              ретельної та багатоетапної обробки тіста. Це включає замішування,
+              кілька етапів вистоювання, та складання тіста з маслом.
+            </p>
+            <img
+              src="/imanges/advantages/2-img.jpg"
+              alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
+              width="370"
+              height="310"
+            />
+          </li>
+          <li>
+            <img
+              src="/imanges/advantages/3-img.jpg"
+              alt="У духовці випечені круасани"
+              width="370"
+              height="310"
+            />
+            <p>
+              В результаті ми отримуємо справжній круасан, який володіє такими
+              якостями, як хрусткий ззовні, легкий і повітряний, а головне -
+              соковитий всередині.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--Product range-->
+      <section>
+        <h2>Ми пропонуюємо</h2>
+        <ul>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>мигдальний</h3>
+            <p>з франжипановою начинкою з мигдального горіха</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>вишневий</h3>
+            <p>з вишнево - шоколадною начинкою</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>шоколадний</h3>
+            <p>з шоколадно - фундучною начинкою</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з куркою</h3>
+            <p>з сиром, салатом та соусом тартар</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з сьомгою</h3>
+            <p>з соусом песто, сирним соусом та салатом</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з прошутто</h3>
+            <p>з сирнім соусом, руколою, в’яленими томатома та соусом песто</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з шинкою</h3>
+            <p>з сиром, салатом та соусом тартар</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з індичкою</h3>
+            <p>з в’яленими томатами та соусом тартар</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з салямі</h3>
+            <p>з сиром, салатом та соусом тартар</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>з яловичиною</h3>
+            <p>з сиром, салатом та соусом барбекю</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+            <h3>порожній</h3>
+            <p>напівфабрикат для самостійного наповнення</p>
+          </li>
+          <li>
+            <img src="" alt="" width="280" height="250" />
+
+            <p>індивідуальна упаковка</p>
+          </li>
+        </ul>
+        <h2>
+          далі буде ще, бо ми вже розробляємо цікаві новинки у світі листкового
+          тіста.
+        </h2>
+      </section>
+      <!--Delivery-->
+    </main>
+    <!--Footer-->
+  </body>
 </html>
