--- a/index.html
+++ b/index.html
@@ -77,63 +77,122 @@
         <h2>Ми пропонуюємо</h2>
         <ul>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/almond.jpg"
+              alt="Круасан з мигдалем"
+              width="280"
+              height="250"
+            />
             <h3>мигдальний</h3>
             <p>з франжипановою начинкою з мигдального горіха</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/cherry.jpg"
+              alt="Круасан з вишнею"
+              width="280"
+              height="250"
+            />
             <h3>вишневий</h3>
             <p>з вишнево - шоколадною начинкою</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/chocolate.jpg"
+              alt="Круасан политий шоколадом"
+              width="280"
+              height="250"
+            />
             <h3>шоколадний</h3>
             <p>з шоколадно - фундучною начинкою</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/chicken.jpg"
+              alt="Розрізаний круасан всередині шматочки курки"
+              width="280"
+              height="250"
+            />
             <h3>з куркою</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/salmon.jpg"
+              alt="Розрізаний круасан всередині шматочки сьомги"
+              width="280"
+              height="250"
+            />
             <h3>з сьомгою</h3>
             <p>з соусом песто, сирним соусом та салатом</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/prosciutto.jpg"
+              alt="Розрізаний круасан всередині шматочки прошутто"
+              width="280"
+              height="250"
+            />
             <h3>з прошутто</h3>
             <p>з сирнім соусом, руколою, в’яленими томатома та соусом песто</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/ham.jpg"
+              alt="Розрізаний круасан всередині шматочки шинки"
+              width="280"
+              height="250"
+            />
             <h3>з шинкою</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/turkey.jpg"
+              alt="Розрізаний круасан всередині шматочки індички"
+              width="280"
+              height="250"
+            />
             <h3>з індичкою</h3>
             <p>з в’яленими томатами та соусом тартар</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/salami.jpg"
+              alt="Розрізаний круасан всередині шматочки ковбаси салямі"
+              width="280"
+              height="250"
+            />
             <h3>з салямі</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/beef.jpg"
+              alt="Розрізаний круасан всередині шматочки яловичини"
+              width="280"
+              height="250"
+            />
             <h3>з яловичиною</h3>
             <p>з сиром, салатом та соусом барбекю</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
+            <img
+              src="/imanges/products/half-stuff.jpg"
+              alt="Круасан без начинки"
+              width="280"
+              height="250"
+            />
             <h3>порожній</h3>
             <p>напівфабрикат для самостійного наповнення</p>
           </li>
           <li>
-            <img src="" alt="" width="280" height="250" />
-
+            <img
+              src="/imanges/products/package.jpg"
+              alt="Круасан в упаковці"
+              width="280"
+              height="250"
+            />
             <p>індивідуальна упаковка</p>
           </li>
         </ul>
@@ -143,7 +202,21 @@
         </h2>
       </section>
       <!--Delivery-->
+      <section>
+        <h3>
+          Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5 разів
+          на тиждень, в залежності від вашої адреси.
+        </h3>
+        <h3>Замовлення приймаються до 19:00.</h3>
+        <h3>
+          Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
+        </h3>
+      </section>
     </main>
     <!--Footer-->
+    <footer>
+      <a href="./"> Логотип</a>
+      <a href="tel:+380503086282">+38 (050) 308 62 82</a>
+    </footer>
   </body>
 </html>
