bugs fixed after validation check

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One11 Bakery</title>
   </head>
   <body>
@@ -16,9 +16,7 @@
           <li><a href="">ДОСТАВКА </a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="tel:+380503086282">+38 (050) 308 62 82</a></li>
-      </ul>
+      <a href="tel:+380503086282">+38 (050) 308 62 82</a>
     </header>
     <!--Main content-->
     <main>
@@ -32,7 +30,7 @@
         <h2>ПРО НАС</h2>
         <ul>
           <li>
-            <img
+            <img 
               src="/imanges/advantages/1-img.jpg"
               alt="Серед великої жмені борошна лежить шматок вершкового масла"
               width="370"
@@ -203,6 +201,7 @@
       </section>
       <!--Delivery-->
       <section>
+        <h2>ДОСТАВКА</h2>
         <h3>
           Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5 разів
           на тиждень, в залежності від вашої адреси.
