--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
               src="/imanges/advantages/1-img.jpg"
               alt="Серед великої жмені борошна лежить шматок вершкового масла"
               width="370"
-              height="310"
-            />
+              height="310">
             <p>
               Кожен наш круасан майже на чверть складється зі справжнього
               вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
@@ -52,16 +51,14 @@
               src="/imanges/advantages/2-img.jpg"
               alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
               width="370"
-              height="310"
-            />
+              height="310">
           </li>
           <li>
             <img
               src="/imanges/advantages/3-img.jpg"
               alt="У духовці випечені круасани"
               width="370"
-              height="310"
-            />
+              height="310">
             <p>
               В результаті ми отримуємо справжній круасан, який володіє такими
               якостями, як хрусткий ззовні, легкий і повітряний, а головне -
@@ -80,7 +77,7 @@
               alt="Круасан з мигдалем"
               width="280"
               height="250"
-            />
+            >
             <h3>мигдальний</h3>
             <p>з франжипановою начинкою з мигдального горіха</p>
           </li>
@@ -90,7 +87,7 @@
               alt="Круасан з вишнею"
               width="280"
               height="250"
-            />
+            >
             <h3>вишневий</h3>
             <p>з вишнево - шоколадною начинкою</p>
           </li>
@@ -100,7 +97,7 @@
               alt="Круасан политий шоколадом"
               width="280"
               height="250"
-            />
+            >
             <h3>шоколадний</h3>
             <p>з шоколадно - фундучною начинкою</p>
           </li>
@@ -110,7 +107,7 @@
               alt="Розрізаний круасан всередині шматочки курки"
               width="280"
               height="250"
-            />
+            >
             <h3>з куркою</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
@@ -120,7 +117,7 @@
               alt="Розрізаний круасан всередині шматочки сьомги"
               width="280"
               height="250"
-            />
+            >
             <h3>з сьомгою</h3>
             <p>з соусом песто, сирним соусом та салатом</p>
           </li>
@@ -130,7 +127,7 @@
               alt="Розрізаний круасан всередині шматочки прошутто"
               width="280"
               height="250"
-            />
+            >
             <h3>з прошутто</h3>
             <p>з сирнім соусом, руколою, в’яленими томатома та соусом песто</p>
           </li>
@@ -140,7 +137,7 @@
               alt="Розрізаний круасан всередині шматочки шинки"
               width="280"
               height="250"
-            />
+            >
             <h3>з шинкою</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
@@ -150,7 +147,7 @@
               alt="Розрізаний круасан всередині шматочки індички"
               width="280"
               height="250"
-            />
+            >
             <h3>з індичкою</h3>
             <p>з в’яленими томатами та соусом тартар</p>
           </li>
@@ -160,7 +157,7 @@
               alt="Розрізаний круасан всередині шматочки ковбаси салямі"
               width="280"
               height="250"
-            />
+            >
             <h3>з салямі</h3>
             <p>з сиром, салатом та соусом тартар</p>
           </li>
@@ -170,7 +167,7 @@
               alt="Розрізаний круасан всередині шматочки яловичини"
               width="280"
               height="250"
-            />
+            >
             <h3>з яловичиною</h3>
             <p>з сиром, салатом та соусом барбекю</p>
           </li>
@@ -180,7 +177,7 @@
               alt="Круасан без начинки"
               width="280"
               height="250"
-            />
+            >
             <h3>порожній</h3>
             <p>напівфабрикат для самостійного наповнення</p>
           </li>
@@ -190,7 +187,7 @@
               alt="Круасан в упаковці"
               width="280"
               height="250"
-            />
+            >
             <p>індивідуальна упаковка</p>
           </li>
         </ul>
