--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li>
             <img 
-              src="/imanges/advantages/1-img.jpg"
+              src="./imanges/advantages/1-img.jpg"
               alt="Серед великої жмені борошна лежить шматок вершкового масла"
               width="370"
               height="310">
@@ -48,14 +48,14 @@
               кілька етапів вистоювання, та складання тіста з маслом.
             </p>
             <img
-              src="/imanges/advantages/2-img.jpg"
+              src="./imanges/advantages/2-img.jpg"
               alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
               width="370"
               height="310">
           </li>
           <li>
             <img
-              src="/imanges/advantages/3-img.jpg"
+              src="./imanges/advantages/3-img.jpg"
               alt="У духовці випечені круасани"
               width="370"
               height="310">
@@ -73,7 +73,7 @@
         <ul>
           <li>
             <img
-              src="/imanges/products/almond.jpg"
+              src="./imanges/products/almond.jpg"
               alt="Круасан з мигдалем"
               width="280"
               height="250"
@@ -83,7 +83,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/cherry.jpg"
+              src="./imanges/products/cherry.jpg"
               alt="Круасан з вишнею"
               width="280"
               height="250"
@@ -93,7 +93,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/chocolate.jpg"
+              src="./imanges/products/chocolate.jpg"
               alt="Круасан политий шоколадом"
               width="280"
               height="250"
@@ -103,7 +103,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/chicken.jpg"
+              src="./imanges/products/chicken.jpg"
               alt="Розрізаний круасан всередині шматочки курки"
               width="280"
               height="250"
@@ -113,7 +113,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/salmon.jpg"
+              src="./imanges/products/salmon.jpg"
               alt="Розрізаний круасан всередині шматочки сьомги"
               width="280"
               height="250"
@@ -123,7 +123,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/prosciutto.jpg"
+              src="./imanges/products/prosciutto.jpg"
               alt="Розрізаний круасан всередині шматочки прошутто"
               width="280"
               height="250"
@@ -133,7 +133,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/ham.jpg"
+              src="./imanges/products/ham.jpg"
               alt="Розрізаний круасан всередині шматочки шинки"
               width="280"
               height="250"
@@ -143,7 +143,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/turkey.jpg"
+              src="./imanges/products/turkey.jpg"
               alt="Розрізаний круасан всередині шматочки індички"
               width="280"
               height="250"
@@ -153,7 +153,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/salami.jpg"
+              src="./imanges/products/salami.jpg"
               alt="Розрізаний круасан всередині шматочки ковбаси салямі"
               width="280"
               height="250"
@@ -163,7 +163,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/beef.jpg"
+              src="./imanges/products/beef.jpg"
               alt="Розрізаний круасан всередині шматочки яловичини"
               width="280"
               height="250"
@@ -173,7 +173,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/half-stuff.jpg"
+              src="./imanges/products/half-stuff.jpg"
               alt="Круасан без начинки"
               width="280"
               height="250"
@@ -183,7 +183,7 @@
           </li>
           <li>
             <img
-              src="/imanges/products/package.jpg"
+              src="./imanges/products/package.jpg"
               alt="Круасан в упаковці"
               width="280"
               height="250"
