--- a/index.html
+++ b/index.html
@@ -1,66 +1,78 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One11 Bakery</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
-    <header>
-      <a href="./"> Логотип</a>
-      <nav>
-        <ul>
-          <li><a href="">ПРО НАС</a></li>
-          <li><a href="">МЕНЮ</a></li>
-          <li><a href="">ДОСТАВКА </a></li>
+    <header class="header">
+      <a class="logo" href="./"> Логотип</a>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-list-item">
+            <a class="header-nav-link" href="">ПРО НАС</a>
+          </li>
+          <li class="header-nav-list-item">
+            <a class="header-nav-link" href="">МЕНЮ</a>
+          </li>
+          <li class="header-nav-list-item">
+            <a class="header-nav-link" href="">ДОСТАВКА </a>
+          </li>
         </ul>
       </nav>
-      <a href="tel:+380503086282">+38 (050) 308 62 82</a>
+      <a class="header-link" href="tel:+380503086282">+38 (050) 308 62 82</a>
     </header>
     <!--Main content-->
     <main>
       <!--Hero-->
-      <section>
-        <h1>Наші круасани - це симфонія смаків.</h1>
-        <h2>CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+      <section class="hero">
+        <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
+        <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
       </section>
       <!--Advantages-->
-      <section>
-        <h2>ПРО НАС</h2>
-        <ul>
-          <li>
-            <img 
+      <section class="advantages">
+        <h2 class="advantages-title">ПРО НАС</h2>
+        <ul class="advantages-list">
+          <li class="advantages-list-item">
+            <img
+              class="advantages-img"
               src="./imanges/advantages/1-img.jpg"
               alt="Серед великої жмені борошна лежить шматок вершкового масла"
               width="370"
-              height="310">
-            <p>
+              height="310"
+            />
+            <p class="advantages-text">
               Кожен наш круасан майже на чверть складється зі справжнього
               вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
               класичної рецептури, якої ми чітко дотримуємося.
             </p>
           </li>
-          <li>
-            <p>
+          <li class="advantages-list-item">
+            <p class="advantages-text">
               На виготовлення крафтового круасана необхідно цілу добу для
               ретельної та багатоетапної обробки тіста. Це включає замішування,
               кілька етапів вистоювання, та складання тіста з маслом.
             </p>
             <img
+              class="advantages-img"
               src="./imanges/advantages/2-img.jpg"
               alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
               width="370"
-              height="310">
+              height="310"
+            />
           </li>
-          <li>
+          <li class="advantages-list-item">
             <img
+              class="advantages-img"
               src="./imanges/advantages/3-img.jpg"
               alt="У духовці випечені круасани"
               width="370"
-              height="310">
-            <p>
+              height="310"
+            />
+            <p class="advantages-text">
               В результаті ми отримуємо справжній круасан, який володіє такими
               якостями, як хрусткий ззовні, легкий і повітряний, а головне -
               соковитий всередині.
@@ -69,151 +81,177 @@
         </ul>
       </section>
       <!--Product range-->
-      <section>
-        <h2>Ми пропонуюємо</h2>
-        <ul>
-          <li>
+      <section class="products">
+        <h2 class="products-title">Ми пропонуюємо</h2>
+        <ul class="products-list">
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/almond.jpg"
               alt="Круасан з мигдалем"
               width="280"
               height="250"
-            >
-            <h3>мигдальний</h3>
-            <p>з франжипановою начинкою з мигдального горіха</p>
+            />
+            <h3 class="products-subtitle">мигдальний</h3>
+            <p class="products-text">
+              з франжипановою начинкою з мигдального горіха
+            </p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/cherry.jpg"
               alt="Круасан з вишнею"
               width="280"
               height="250"
-            >
-            <h3>вишневий</h3>
-            <p>з вишнево - шоколадною начинкою</p>
+            />
+            <h3 class="products-subtitle">вишневий</h3>
+            <p class="products-text">з вишнево - шоколадною начинкою</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/chocolate.jpg"
               alt="Круасан политий шоколадом"
               width="280"
               height="250"
-            >
-            <h3>шоколадний</h3>
-            <p>з шоколадно - фундучною начинкою</p>
+            />
+            <h3 class="products-subtitle">шоколадний</h3>
+            <p class="products-text">з шоколадно - фундучною начинкою</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/chicken.jpg"
               alt="Розрізаний круасан всередині шматочки курки"
               width="280"
               height="250"
-            >
-            <h3>з куркою</h3>
-            <p>з сиром, салатом та соусом тартар</p>
+            />
+            <h3 class="products-subtitle">з куркою</h3>
+            <p class="products-text">з сиром, салатом та соусом тартар</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/salmon.jpg"
               alt="Розрізаний круасан всередині шматочки сьомги"
               width="280"
               height="250"
-            >
-            <h3>з сьомгою</h3>
-            <p>з соусом песто, сирним соусом та салатом</p>
+            />
+            <h3 class="products-subtitle">з сьомгою</h3>
+            <p class="products-text">
+              з соусом песто, сирним соусом та салатом
+            </p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/prosciutto.jpg"
               alt="Розрізаний круасан всередині шматочки прошутто"
               width="280"
               height="250"
-            >
-            <h3>з прошутто</h3>
-            <p>з сирнім соусом, руколою, в’яленими томатома та соусом песто</p>
+            />
+            <h3 class="products-subtitle">з прошутто</h3>
+            <p class="products-text">
+              з сирнім соусом, руколою, в’яленими томатома та соусом песто
+            </p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/ham.jpg"
               alt="Розрізаний круасан всередині шматочки шинки"
               width="280"
               height="250"
-            >
-            <h3>з шинкою</h3>
-            <p>з сиром, салатом та соусом тартар</p>
+            />
+            <h3 class="products-subtitle">з шинкою</h3>
+            <p class="products-text">з сиром, салатом та соусом тартар</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/turkey.jpg"
               alt="Розрізаний круасан всередині шматочки індички"
               width="280"
               height="250"
-            >
-            <h3>з індичкою</h3>
-            <p>з в’яленими томатами та соусом тартар</p>
+            />
+            <h3 class="products-subtitle">з індичкою</h3>
+            <p class="products-text">з в’яленими томатами та соусом тартар</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/salami.jpg"
               alt="Розрізаний круасан всередині шматочки ковбаси салямі"
               width="280"
               height="250"
-            >
-            <h3>з салямі</h3>
-            <p>з сиром, салатом та соусом тартар</p>
+            />
+            <h3 class="products-subtitle">з салямі</h3>
+            <p class="products-text">з сиром, салатом та соусом тартар</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/beef.jpg"
               alt="Розрізаний круасан всередині шматочки яловичини"
               width="280"
               height="250"
-            >
-            <h3>з яловичиною</h3>
-            <p>з сиром, салатом та соусом барбекю</p>
+            />
+            <h3 class="products-subtitle">з яловичиною</h3>
+            <p class="products-text">з сиром, салатом та соусом барбекю</p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/half-stuff.jpg"
               alt="Круасан без начинки"
               width="280"
               height="250"
-            >
-            <h3>порожній</h3>
-            <p>напівфабрикат для самостійного наповнення</p>
+            />
+            <h3 class="products-subtitle">порожній</h3>
+            <p class="products-text">
+              напівфабрикат для самостійного наповнення
+            </p>
           </li>
-          <li>
+          <li class="products-list-item">
             <img
+              class="products-list-img"
               src="./imanges/products/package.jpg"
               alt="Круасан в упаковці"
               width="280"
               height="250"
-            >
-            <p>індивідуальна упаковка</p>
+            />
+            <p class="products-text">індивідуальна упаковка</p>
           </li>
         </ul>
-        <h2>
+        <h2 class="products-newstitle">
           далі буде ще, бо ми вже розробляємо цікаві новинки у світі листкового
           тіста.
         </h2>
       </section>
       <!--Delivery-->
-      <section>
-        <h2>ДОСТАВКА</h2>
-        <h3>
-          Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5 разів
-          на тиждень, в залежності від вашої адреси.
-        </h3>
-        <h3>Замовлення приймаються до 19:00.</h3>
-        <h3>
-          Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
-        </h3>
+      <section class="delivery">
+        <h2 class="delivery-title">ДОСТАВКА</h2>
+        <ul class="delivery-list">
+          <li class="delivery-list-item">
+            <h3 class="delivery-list-text">
+              Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5
+              разів на тиждень, в залежності від вашої адреси.
+            </h3>
+          </li>
+          <li class="delivery-list-item"><h3 class="delivery-list-text">Замовлення приймаються до 19:00.</h3></li>
+          <li class="delivery-list-item">
+            <h3 class="delivery-list-text">
+              Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
+            </h3>
+          </li>
+        </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="./"> Логотип</a>
-      <a href="tel:+380503086282">+38 (050) 308 62 82</a>
+    <footer class="footer">
+      <a class="logo" href="./"> Логотип</a>
+      <a class="footer-link" href="tel:+380503086282">+38 (050) 308 62 82</a>
     </footer>
   </body>
 </html>
