--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One11 Bakery</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -239,7 +245,9 @@
               разів на тиждень, в залежності від вашої адреси.
             </h3>
           </li>
-          <li class="delivery-list-item"><h3 class="delivery-list-text">Замовлення приймаються до 19:00.</h3></li>
+          <li class="delivery-list-item">
+            <h3 class="delivery-list-text">Замовлення приймаються до 19:00.</h3>
+          </li>
           <li class="delivery-list-item">
             <h3 class="delivery-list-text">
               Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
