--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   <body>
     <!--Header-->
     <header class="header">
-      <a class="logo" href="./"> Логотип</a>
+      <a class="logo link" href="./"> Логотип</a>
       <nav class="header-nav">
-        <ul class="header-nav-list">
+        <ul class="header-nav-list list">
           <li class="header-nav-list-item">
-            <a class="header-nav-link" href="">ПРО НАС</a>
+            <a class="header-nav-link link" href="">ПРО НАС</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-link" href="">МЕНЮ</a>
+            <a class="header-nav-link link" href="">МЕНЮ</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-link" href="">ДОСТАВКА </a>
+            <a class="header-nav-link link" href="">ДОСТАВКА </a>
           </li>
         </ul>
       </nav>
-      <a class="header-link" href="tel:+380503086282">+38 (050) 308 62 82</a>
+      <a class="header-link link" href="tel:+380503086282">+38 (050) 308 62 82</a>
     </header>
     <!--Main content-->
     <main>
@@ -41,7 +41,7 @@
       <!--Advantages-->
       <section class="advantages">
         <h2 class="advantages-title">ПРО НАС</h2>
-        <ul class="advantages-list">
+        <ul class="advantages-list list">
           <li class="advantages-list-item">
             <img
               class="advantages-img"
@@ -89,7 +89,7 @@
       <!--Product range-->
       <section class="products">
         <h2 class="products-title">Ми пропонуюємо</h2>
-        <ul class="products-list">
+        <ul class="products-list list">
           <li class="products-list-item">
             <img
               class="products-list-img"
@@ -238,7 +238,7 @@
       <!--Delivery-->
       <section class="delivery">
         <h2 class="delivery-title">ДОСТАВКА</h2>
-        <ul class="delivery-list">
+        <ul class="delivery-list list">
           <li class="delivery-list-item">
             <h3 class="delivery-list-text">
               Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5
@@ -258,8 +258,8 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="logo" href="./"> Логотип</a>
-      <a class="footer-link" href="tel:+380503086282">+38 (050) 308 62 82</a>
+      <a class="logo link" href="./"> Логотип</a>
+      <a class="footer-link link" href="tel:+380503086282">+38 (050) 308 62 82</a>
     </footer>
   </body>
 </html>
