--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
       <nav class="header-nav">
         <ul class="header-nav-list list">
           <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">ПРО НАС</a>
+            <a class="header-nav-link link" href="">Про нас</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">МЕНЮ</a>
+            <a class="header-nav-link link" href="">Меню</a>
           </li>
           <li class="header-nav-list-item">
-            <a class="header-nav-link link" href="">ДОСТАВКА </a>
+            <a class="header-nav-link link" href="">Доставка</a>
           </li>
         </ul>
       </nav>
-      <a class="header-link link" href="tel:+380503086282">+38 (050) 308 62 82</a>
+      <a class="header-link link" href="tel:+380503086282"
+        >+38 (050) 308 62 82</a
+      >
     </header>
     <!--Main content-->
     <main>
@@ -40,7 +42,7 @@
       </section>
       <!--Advantages-->
       <section class="advantages">
-        <h2 class="advantages-title">ПРО НАС</h2>
+        <h2 class="advantages-title" hidden>ПРО НАС</h2>
         <ul class="advantages-list list">
           <li class="advantages-list-item">
             <img
@@ -57,7 +59,7 @@
             </p>
           </li>
           <li class="advantages-list-item">
-            <p class="advantages-text">
+            <p class="advantages-text light-text">
               На виготовлення крафтового круасана необхідно цілу добу для
               ретельної та багатоетапної обробки тіста. Це включає замішування,
               кілька етапів вистоювання, та складання тіста з маслом.
@@ -237,7 +239,7 @@
       </section>
       <!--Delivery-->
       <section class="delivery">
-        <h2 class="delivery-title">ДОСТАВКА</h2>
+        <h2 class="delivery-title" hidden>ДОСТАВКА</h2>
         <ul class="delivery-list list">
           <li class="delivery-list-item">
             <h3 class="delivery-list-text">
@@ -246,7 +248,9 @@
             </h3>
           </li>
           <li class="delivery-list-item">
-            <h3 class="delivery-list-text">Замовлення приймаються до 19:00.</h3>
+            <h3 class="delivery-list-text light-text">
+              Замовлення приймаються до 19:00.
+            </h3>
           </li>
           <li class="delivery-list-item">
             <h3 class="delivery-list-text">
@@ -259,7 +263,9 @@
     <!--Footer-->
     <footer class="footer">
       <a class="logo link" href="./"> Логотип</a>
-      <a class="footer-link link" href="tel:+380503086282">+38 (050) 308 62 82</a>
+      <a class="footer-link link" href="tel:+380503086282"
+        >+38 (050) 308 62 82</a
+      >
     </footer>
   </body>
 </html>
