--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </section>
       <!--Advantages-->
       <section class="advantages">
-        <h2 class="advantages-title" hidden>ПРО НАС</h2>
+        <h2 class="advantages-title visually-hidden">ПРО НАС</h2>
         <ul class="advantages-list list">
           <li class="advantages-list-item">
             <img
@@ -249,7 +249,7 @@
       </section>
       <!--Delivery-->
       <section class="delivery">
-        <h2 class="delivery-title" hidden>ДОСТАВКА</h2>
+        <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
         <ul class="delivery-list list">
           <li class="delivery-list-item">
             <h3 class="delivery-list-text">
