--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body>
     <!--Header-->
     <header class="header">
-      <a class="logo link" href="./"> Логотип</a>
+      <div class="container header-container">
+      <a class="logo link" href="./"> <img src="./imanges/logo.png" alt="One11 Bakery"></a>
       <nav class="header-nav">
         <ul class="header-nav-list list">
           <li class="header-nav-list-item">
@@ -42,16 +43,20 @@
       <a class="header-link link" href="tel:+380503086282"
         >+38 (050) 308 62 82</a
       >
+    </div>
     </header>
     <!--Main content-->
     <main>
       <!--Hero-->
       <section class="hero">
+        <div class="container">
         <h1 class="hero-title">Наші круасани - це симфонія смаків.</h1>
         <h2 class="hero-subtitle">CПІВПРАЦЮЙТЕ З НАМИ !</h2>
+        </div>
       </section>
       <!--Advantages-->
       <section class="advantages">
+        <div class="container">
         <h2 class="advantages-title visually-hidden">ПРО НАС</h2>
         <ul class="advantages-list list">
           <li class="advantages-list-item">
@@ -97,9 +102,11 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!--Product range-->
       <section class="products">
+        <div class="container">
         <h2 class="products-title">Ми пропонуюємо</h2>
         <ul class="products-list list">
           <li class="products-list-item">
@@ -246,9 +253,11 @@
           далі буде ще, бо ми вже розробляємо цікаві новинки у світі листкового
           тіста.
         </h2>
+        </div>
       </section>
       <!--Delivery-->
       <section class="delivery">
+        <div class="container">
         <h2 class="delivery-title visually-hidden">ДОСТАВКА</h2>
         <ul class="delivery-list list">
           <li class="delivery-list-item">
@@ -268,14 +277,17 @@
             </h3>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="logo link" href="./"> Логотип</a>
+      <div class="container">
+      <a class="logo link" href="./"><img src="./imanges/logo.png" alt="One11 Bakery"></a>
       <a class="footer-link link" href="tel:+380503086282"
         >+38 (050) 308 62 82</a
       >
+      </div>
     </footer>
   </body>
 </html>
